# pygame-colliders

./: .gitignore  CHANGELOG.rst  LICENSE  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-test-pypi.yml  publish-to-testpypi-and-pypi.yml  test-and-lint.yml
docs/: makelive.bat
docs/source/: collider-types.rst  conf.py  contents.rst  index.rst  reference.rst
docs/source/ref/: concavecollider.rst  convexcollider.rst  rect.rst  vector2.rst
pygame_colliders/: __init__.py  base.py  concave.py  convex.py  rect.py  types.py  utils.py  vector.py
tests/: test_collider_move.py  test_collisions.py  test_rect.py  test_utils.py  test_vector.py
