
[tool.poetry]
name = "pygame-colliders"
description = "Polygon collider library for Pygame"
readme = "README.rst"
documentation = "https://pygame-colliders.readthedocs.io/"
version = "0.1.3.dev2"
license = "BSD-3-Clause"
homepage = "https://github.com/jtiai/pygame-colliders"
repository = "https://github.com/jtiai/pygame-colliders"

authors = ["Jani Tiainen <jani@tiainen.cc>"]
classifiers = [
    "Topic :: Software Development :: Libraries :: pygame",
]
packages = [
    { include = "pygame_colliders" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jtiai/pygame-colliders/issues"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
black = "^20.8b1"
Sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"
cloud_sptheme = "^1.10.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
