[metadata]
name = pygame-colliders
version = attr:pygame_colliders.__version__
url = https://github.com/jtiai/pygame-colliders
author = Jani Tiainen
author-email = jani@tiainen.cc
long-description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license-file = LICENSE
platform = Any

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
exclude = tests

[flake8]
count = True
statistics = True
max-line-length = 127
max-complexity = 10
per-file-ignores =
    # Imported but unused
    __init__.py: F401
exclude =
    docs/source/conf.py
    .git
    dist
    build

[tool:pytest]
minversion = 6.1
testpaths =
    tests
